Fixed vertical alignment of right content

--- a/css/external.css
+++ b/css/external.css
@@ -46,7 +46,7 @@ h2.about{
 	font-size: 32px;
 	height: 80px;
 	line-height: 125%;
-	margin-bottom: 30px;
+	padding-bottom: 30px;
     max-width: 66.6666666667%;
 	text-align: center;
 }
@@ -56,7 +56,7 @@ h3.about{
 	height: 30px;
 	letter-spacing: 0.045em;
 	line-height: 140.02%;
-	margin-bottom: 45px;
+	padding-bottom: 45px;
 	max-width: 66.6666666667%;
 }
 .about{
@@ -70,18 +70,18 @@ h3.about{
 	background: url(../img/about.png) center/cover;
 }
 .about-right{
-    align-content: flex-start;
+    align-content: center;
 	box-sizing: border-box;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	padding: 130px 76px 0;
+	padding: 0 76px;
 }
 .about-text-wrapper{
 	border-bottom: 1px dashed rgba(160, 160, 160, .5);
 	border-top: 1px dashed rgba(160, 160, 160, .5);
 	display: flex;
-	margin-bottom: 45px;
+	//margin-bottom: 45px;
 	padding: 45px 0;
 	width: 100%;
 }
@@ -248,7 +248,9 @@ h3.about{
 		display: ms-flexbox;
 		justify-content: space-around;
 	}
-	
+	.about-right .social-wrapper {
+		padding-top: 45px;
+	}
 	.social a{
 		color: #337ab7;
 	}
